# ros2_swift

./: README.md  rclswift.repos  ros2_swift.repos
Crcl/: Package.swift  README.md  module.modulemap
RclSwift/: Package.resolved  Package.swift
RclSwift/Sources/Node/: Node.swift
RclSwift/Sources/Publisher/: Publisher.swift
RclSwift/Tests/: LinuxMain.swift
RclSwift/Tests/RclSwiftTests/: RclSwiftTests.swift
rclswift/: CMakeLists.txt  README.md  module.modulemap  package.xml
rclswift/Executables/: Test.swift
rclswift/Sources/: Context.swift
rclswift/Sources/Node/: Node.swift
rclswift/Sources/Utils/: Capsule.swift  ErrorHandling.swift
rclswift/Tests/RclSwiftTests/: XCTestManifests.swift
rclswift/modules/: module.modulemap
rclswift/modules/C/: rcl.h
rclswift_common/: CMakeLists.txt  Interfaces.swift  TestInterfaces.swift  package.xml
rclswift_common/swift/: Interfaces.swift
rosidl_generator_swift/: CMakeLists.txt  package.xml  rosidl_generator_swift-extras.cmake.in
rosidl_generator_swift/cmake/: patch_swift_preference.cmake  register_swift.cmake  rosidl_generator_swift_generate_interfaces.cmake  rosidl_generator_swift_get_typesupports.cmake  swift_preference.cmake
rosidl_generator_swift/resource/: idl.c.em  idl.h.em  idl.modulemap.em  idl.swift.em  msg.c.em  msg.h.em  msg.modulemap.em  msg.swift.em
rosidl_generator_swift/rosidl_generator_swift/: __init__.py
