<?xml version="1.0"?>
<package format="2">
  <name>rclswift_common</name>
  <version>0.1.0</version>
  <description>Assorted utilities for the Swift client.</description>
  <maintainer email="atyshka12@gmail.com">Alex Tyshka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
